--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Code-Together</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
 </head>
+
 <body>
   <h1>Hi, I'm Tim!</h1>
   <p>Hey I'm Tashe!</p>
   <p>IM Kayleigh</p>
+  <p>I'm Brad!</p>
 </body>
+
 </html>
